--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -42,3 +42,10 @@
 @import "spinners";
 @import "utilities";
 @import "print";
+
+.brand-text-icon {
+  font-size: 32px;
+  font-weight: 700;
+  font-family: "Nunito", sans-serif;
+  color: $primary;
+}
