--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -48,6 +48,10 @@
   font-weight: 700;
   font-family: "Nunito", sans-serif;
   color: $primary;
+  &:hover {
+    color: $primary;
+    text-decoration: none;
+  }
 }
 
 header {
@@ -58,8 +62,13 @@ header {
   .navbar {
     height: 80px;
 
-    .navbar-nav {
+    ul.navbar-nav {
       li.nav-item {
+        &.active {
+          a.nav-link {
+            color: $primary;
+          }
+        }
         a {
           &.nav-link {
             color: $gray-900;
