--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -39,10 +39,11 @@ $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
 $red:     #dc3545 !default;
 $orange:  #fd7e14 !default;
-$yellow:  #ffc107 !default;
+$yellow:  #F5C827 !default;
 $green:   #28a745 !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
+$dark-blue: #00355B !default;
 
 $colors: () !default;
 $colors: map-merge(
