--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -5,6 +5,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 
+@import "color-variables";
 @import "functions";
 @import "variables";
 @import "mixins";
@@ -199,4 +200,9 @@ section {
       }
     }
   }
+}
+
+.testimonial-hero, .testimonial-hero img {
+  width: 293px;
+  height: 358px;
 }
