--- a/src/assets/scss/_color-variables.scss
+++ b/src/assets/scss/_color-variables.scss
@@ -13,11 +13,11 @@ $black:    #000 !default;
 $blue:    #006BB9 !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
-$pink:    #e83e8c !default;
+$pink:    #F2736B !default;
 $red:     #dc3545 !default;
 $orange:  #fd7e14 !default;
 $yellow:  #F5C827 !default;
 $green:   #28a745 !default;
-$teal:    #20c997 !default;
+$teal:    #6BF2A9 !default;
 $cyan:    #17a2b8 !default;
 $dark-blue: #00355B !default;
